--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="VectorForgeML: High-performance R + C++ Machine Learning Framework">
-    <title>VectorForgeML - fast, modular, production-ready</title>
+    <meta name="description"
+        content="VectorForgeML is a high-performance, blazing fast machine learning framework for R, powered by an optimized C++ backend. Build, train, and deploy models in milliseconds.">
+    <meta name="keywords"
+        content="VectorForgeML, R Machine Learning, C++ ML Framework, Fast R Library, Data Science, Linear Regression, Random Forest, High Performance Computing, BLAS, LAPACK, AI for R">
+    <meta name="author" content="Mohd Musheer">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://vectorforgeml.com/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://vectorforgeml.com/">
+    <meta property="og:title" content="VectorForgeML - The Fastest R + C++ ML Framework">
+    <meta property="og:description"
+        content="Integrate C++ speed with R simplicity. VectorForgeML delivers state-of-the-art performance for your machine learning workflows.">
+    <meta property="og:image" content="https://vectorforgeml.com/assets/images/VectorForgeML_Logo.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://vectorforgeml.com/">
+    <meta property="twitter:title" content="VectorForgeML - Blazing Fast ML for R">
+    <meta property="twitter:description"
+        content="Accelerate your R data science projects with VectorForgeML's optimized C++ engine.">
+    <meta property="twitter:image" content="https://vectorforgeml.com/assets/images/VectorForgeML_Logo.png">
+
+    <title>VectorForgeML - High-Performance R Machine Learning Framework</title>
     <link rel="icon" type="image/png" href="/assets/images/VectorForgeML_Logo.png">
     <link rel="stylesheet" href="/assets/css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Fira+Code&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Fira+Code&display=swap"
         rel="stylesheet">
+
+    <!-- JSON-LD Schema -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "VectorForgeML",
+      "operatingSystem": "Windows, Linux, macOS",
+      "applicationCategory": "DeveloperApplication",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      },
+      "description": "A high-performance machine learning library that integrates R with an optimized C++ backend for maximum speed and efficiency.",
+      "author": {
+          "@type": "Person",
+          "name": "Mohd Musheer"
+      }
+    }
+    </script>
 </head>
 
 <body>
