--- a/VectorForgeML.Rcheck/VectorForgeML/html/00Index.html
+++ b/VectorForgeML.Rcheck/VectorForgeML/html/00Index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head><title>R: High Performance ML Backend</title>
+<head><title>R: High-Performance Machine Learning Framework with C++
+Acceleration</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 <link rel="stylesheet" type="text/css" href="R.css">
 </head><body><div class="container">
-<h1> High Performance ML Backend
+<h1> High-Performance Machine Learning Framework with C++
+Acceleration
 <img class="toplogo" src="../../../doc/html/Rlogo.svg" alt="[R logo]">
 </h1>
 <hr>
