Add GitHub Google site verification meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta name="google-site-verification" content="QDHSJbBAdzIkWQLw6yAtoxZEenE6ORsdG3zPeMp32uM" />
     <meta name="google-site-verification" content="pvwns-MlBlfTv_vlTvW6kHxVh2sz_WIUECOlBES6TYk" />
     <meta name="yandex-verification" content="1c2f59332c343969" />
     <meta charset="UTF-8">
