--- a/public/index.html
+++ b/public/index.html
@@ -171,7 +171,7 @@
           "name": "How do I install VectorForgeML?",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "You can install VectorForgeML from GitHub using: install.packages('remotes'); remotes::install_github('mohd-musheer/VectorForgeML'). You need R >= 4.0.0 and a C++ compiler installed."
+            "text": "You can install VectorForgeML directly from CRAN using: install.packages('VectorForgeML'). You need R >= 4.0.0 and a C++ compiler installed."
           }
         },
         {
@@ -221,6 +221,12 @@
             <section style="text-align: center; padding: 6rem 0;" aria-label="Introduction to VectorForgeML">
                 <h1 class="fade-in">Supercharge your R workflows with <br><span
                         class="text-gradient">VectorForgeML</span></h1>
+                <!-- CRAN Badges -->
+                <div class="fade-in" style="margin-top: 1rem; display: flex; justify-content: center; gap: 0.5rem; flex-wrap: wrap; animation-delay: 0.05s;">
+                    <a href="https://cran.r-project.org/package=VectorForgeML" rel="noopener" target="_blank"><img src="https://www.r-pkg.org/badges/version/VectorForgeML" alt="CRAN Version" style="height: 22px;"></a>
+                    <a href="https://cran.r-project.org/package=VectorForgeML" rel="noopener" target="_blank"><img src="https://cranlogs.r-pkg.org/badges/VectorForgeML" alt="CRAN Downloads" style="height: 22px;"></a>
+                    <a href="https://github.com/mohd-musheer/VectorForgeML/actions" rel="noopener" target="_blank"><img src="https://github.com/mohd-musheer/VectorForgeML/actions/workflows/R-CMD-check.yaml/badge.svg" alt="R-CMD-check" style="height: 22px;"></a>
+                </div>
                 <p class="fade-in"
                     style="font-size: 1.25rem; color: var(--text-secondary); max-width: 600px; margin: 1.5rem auto; animation-delay: 0.1s;">
                     The high-performance <strong>Machine Learning framework</strong> bridging the gap between <strong>R's simplicity</strong> and <strong>C++'s
@@ -314,6 +320,51 @@ preds <- pipe$predict(X_test)
                 </div>
             </section>
 
+            <!-- Now Officially on CRAN -->
+            <section style="margin-top: 6rem; text-align: center;" class="slide-up" aria-label="CRAN Publication Announcement">
+                <h2>Now Officially on CRAN</h2>
+                <div class="glass-panel" style="max-width: 800px; margin: 2rem auto; padding: 2.5rem; text-align: left;">
+                    <p style="color: var(--text-secondary); line-height: 1.8; font-size: 1.05rem;">
+                        VectorForgeML has been officially accepted and published on the
+                        <strong>Comprehensive R Archive Network (CRAN)</strong>. The package has passed all CRAN checks
+                        and is now globally distributed through CRAN mirrors worldwide.
+                    </p>
+                    <p style="color: var(--text-secondary); line-height: 1.8; margin-top: 1rem; font-size: 1.05rem;">
+                        Install it directly in R with a single command:
+                    </p>
+                    <pre style="margin-top: 1rem;"><code class="language-r">install.packages("VectorForgeML")
+library(VectorForgeML)</code></pre>
+                    <p style="color: var(--text-secondary); line-height: 1.8; margin-top: 1.25rem; font-size: 1.05rem;">
+                        VectorForgeML has been assigned a DOI for academic citation:<br>
+                        <strong>DOI:</strong> <code>10.32614/CRAN.package.VectorForgeML</code>
+                    </p>
+                    <div style="margin-top: 1.5rem;">
+                        <a href="https://cran.r-project.org/package=VectorForgeML" class="btn-primary" rel="noopener" target="_blank">View on CRAN &rarr;</a>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Open for Collaboration -->
+            <section style="margin-top: 6rem; text-align: center;" class="slide-up" aria-label="Collaboration">
+                <h2>Open for Collaboration</h2>
+                <div class="glass-panel" style="max-width: 800px; margin: 2rem auto; padding: 2.5rem; text-align: left;">
+                    <p style="color: var(--text-secondary); line-height: 1.8; font-size: 1.05rem;">
+                        VectorForgeML welcomes contributions from researchers, data scientists, and developers.
+                        Whether you are interested in research collaborations, performance optimization, or expanding
+                        the algorithm library, there are many ways to get involved.
+                    </p>
+                    <ul style="color: var(--text-secondary); margin-top: 1rem; padding-left: 1.5rem; line-height: 2;">
+                        <li>Open to <strong>research collaborations</strong> in machine learning and high-performance computing</li>
+                        <li><strong>Contributions welcome</strong> &mdash; new algorithms, bug fixes, and documentation improvements</li>
+                        <li>Active roadmap for <strong>performance optimization</strong> and <strong>algorithm expansion</strong></li>
+                        <li>Use <a href="https://github.com/mohd-musheer/VectorForgeML/issues" style="color: var(--accent-primary); text-decoration: none;" rel="noopener" target="_blank">GitHub Issues</a> and <a href="https://github.com/mohd-musheer/VectorForgeML/discussions" style="color: var(--accent-primary); text-decoration: none;" rel="noopener" target="_blank">Discussions</a> to share ideas or report bugs</li>
+                    </ul>
+                    <div style="margin-top: 1.5rem;">
+                        <a href="https://github.com/mohd-musheer/VectorForgeML" class="btn-outline" rel="noopener" target="_blank">Contribute on GitHub &rarr;</a>
+                    </div>
+                </div>
+            </section>
+
             <!-- FAQ Section (visible, matches FAQ schema) -->
             <section style="margin-top: 6rem;" aria-label="Frequently Asked Questions about VectorForgeML">
                 <h2 style="text-align: center;">Frequently Asked Questions</h2>
@@ -324,7 +375,7 @@ preds <- pipe$predict(X_test)
                     </div>
                     <div class="glass-panel" style="padding: 1.5rem; margin-bottom: 1rem;">
                         <h3 style="font-size: 1.05rem; margin-bottom: 0.5rem;">How do I install VectorForgeML?</h3>
-                        <p style="color: var(--text-secondary); line-height: 1.6;">Install VectorForgeML from GitHub: <code>remotes::install_github("mohd-musheer/VectorForgeML")</code>. You need R &ge; 4.0.0 and a C++ compiler. See the <a href="/install/" style="color: var(--accent-primary); text-decoration: none;">full installation guide</a> for details.</p>
+                        <p style="color: var(--text-secondary); line-height: 1.6;">Install VectorForgeML directly from CRAN: <code>install.packages("VectorForgeML")</code>. You need R &ge; 4.0.0 and a C++ compiler. See the <a href="/install/" style="color: var(--accent-primary); text-decoration: none;">full installation guide</a> for details.</p>
                     </div>
                     <div class="glass-panel" style="padding: 1.5rem; margin-bottom: 1rem;">
                         <h3 style="font-size: 1.05rem; margin-bottom: 0.5rem;">What algorithms does VectorForgeML support?</h3>
