--- a/public/install/index.html
+++ b/public/install/index.html
@@ -8,9 +8,9 @@
     <!-- Primary SEO Meta -->
     <title>Install VectorForgeML - Setup Guide for R & C++ ML Framework</title>
     <meta name="description"
-        content="Step-by-step installation guide for VectorForgeML. Install the high-performance C++ machine learning framework for R from GitHub in minutes. Prerequisites: R >= 4.0.0 and a C++ compiler.">
+        content="Step-by-step installation guide for VectorForgeML. Install the high-performance C++ machine learning framework for R from CRAN with install.packages(). Prerequisites: R >= 4.0.0 and a C++ compiler.">
     <meta name="keywords"
-        content="install VectorForgeML, VectorForgeML setup, VectorForgeML installation guide, R ML framework install, VectorForgeML GitHub, remotes install_github VectorForgeML">
+        content="install VectorForgeML, VectorForgeML setup, VectorForgeML installation guide, R ML framework install, VectorForgeML CRAN, install.packages VectorForgeML">
     <meta name="author" content="Mohd Musheer">
     <meta name="robots" content="index, follow, max-snippet:-1">
     <link rel="canonical" href="https://vectorforgeml.work.gd/install/">
@@ -22,14 +22,14 @@
     <meta property="og:url" content="https://vectorforgeml.work.gd/install/">
     <meta property="og:title" content="Install VectorForgeML - Quick Setup Guide">
     <meta property="og:description"
-        content="Install VectorForgeML in minutes. Step-by-step guide for setting up the high-performance C++ ML framework for R.">
+        content="Install VectorForgeML from CRAN in seconds. Step-by-step guide for setting up the high-performance C++ ML framework for R.">
     <meta property="og:image" content="https://vectorforgeml.work.gd/assets/images/VectorForgeML_Logo.png">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Install VectorForgeML - Setup Guide">
     <meta name="twitter:description"
-        content="Step-by-step installation guide for VectorForgeML, the high-performance C++ machine learning framework for R.">
+        content="Install VectorForgeML from CRAN with install.packages(). Step-by-step guide for the high-performance C++ ML framework for R.">
     <meta name="twitter:image" content="https://vectorforgeml.work.gd/assets/images/VectorForgeML_Logo.png">
 
     <link rel="icon" type="image/png" href="/assets/images/VectorForgeML_Logo.png">
@@ -59,18 +59,12 @@
         {
           "@type": "HowToStep",
           "position": 2,
-          "name": "Install remotes package",
-          "text": "Run: install.packages('remotes', repos='https://cloud.r-project.org')"
+          "name": "Install VectorForgeML from CRAN",
+          "text": "Run: install.packages('VectorForgeML')"
         },
         {
           "@type": "HowToStep",
           "position": 3,
-          "name": "Install VectorForgeML from GitHub",
-          "text": "Run: remotes::install_github('mohd-musheer/VectorForgeML')"
-        },
-        {
-          "@type": "HowToStep",
-          "position": 4,
           "name": "Verify Installation",
           "text": "Run: library(VectorForgeML); ls('package:VectorForgeML') to confirm the package is loaded."
         }
@@ -111,7 +105,7 @@
     <div class="layout-container">
         <main class="main-content">
             <h1 class="fade-in">Install VectorForgeML</h1>
-            <p style="color: var(--text-secondary); font-size: 1.1rem; margin-bottom: 2rem;">Get VectorForgeML up and running in your R environment. The framework is hosted on <a href="https://github.com/mohd-musheer/VectorForgeML" style="color: var(--accent-primary); text-decoration: none;" rel="noopener" target="_blank">GitHub</a> and installs in minutes.</p>
+            <p style="color: var(--text-secondary); font-size: 1.1rem; margin-bottom: 2rem;">VectorForgeML is available on <a href="https://cran.r-project.org/package=VectorForgeML" style="color: var(--accent-primary); text-decoration: none;" rel="noopener" target="_blank">CRAN</a> and installs directly via <code>install.packages()</code>.</p>
 
             <section class="glass-panel slide-up" style="padding: 2rem; margin-top: 2rem;">
                 <h2 style="font-size: 1.3rem;">Step 1: Prerequisites</h2>
@@ -122,12 +116,12 @@
                     <li><strong>Linux:</strong> Install <code>build-essential</code> and <code>r-base-dev</code></li>
                 </ul>
 
-                <h2 style="font-size: 1.3rem; margin-top: 2rem;">Step 2: Install from GitHub</h2>
-                <p style="color: var(--text-secondary);">VectorForgeML is installed directly from GitHub using the <code>remotes</code> package.</p>
+                <h2 style="font-size: 1.3rem; margin-top: 2rem;">Step 2: Install from CRAN (Recommended)</h2>
+                <p style="color: var(--text-secondary);">VectorForgeML is published on CRAN and can be installed with a single command.</p>
 
                 <div style="position: relative; margin-top: 1rem;">
-                    <pre><code class="language-r">install.packages("remotes", repos="https://cloud.r-project.org")
-remotes::install_github("mohd-musheer/VectorForgeML")</code></pre>
+                    <pre><code class="language-r">install.packages("VectorForgeML")
+library(VectorForgeML)</code></pre>
                 </div>
 
                 <h2 style="font-size: 1.3rem; margin-top: 2rem;">Step 3: Verify Installation</h2>
@@ -135,6 +129,16 @@ remotes::install_github("mohd-musheer/VectorForgeML")</code></pre>
 # Check available functions
 ls("package:VectorForgeML")</code></pre>
                 <p style="color: var(--text-secondary); margin-top: 0.5rem;">You should see 30+ functions listed. Ready to go! Check out the <a href="/docs/" style="color: var(--accent-primary); text-decoration: none;">documentation</a> for quick start guides.</p>
+            </section>
+
+            <section class="glass-panel slide-up" style="padding: 2rem; margin-top: 2rem; animation-delay: 0.05s;">
+                <h2 style="font-size: 1.3rem;">Development Version (GitHub)</h2>
+                <p style="color: var(--text-secondary);">To install the latest development version with the newest features and fixes, use the <code>remotes</code> package.</p>
+                <div style="position: relative; margin-top: 1rem;">
+                    <pre><code class="language-r">install.packages("remotes", repos="https://cloud.r-project.org")
+remotes::install_github("mohd-musheer/VectorForgeML")</code></pre>
+                </div>
+                <p style="color: var(--text-secondary); margin-top: 0.5rem;">Note: The development version may contain experimental features. For production use, the CRAN release is recommended.</p>
             </section>
 
             <section class="mt-4 slide-up" style="animation-delay: 0.1s;">
